# agent-jupyter-toolkit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
demos/postgresql-devicelogon/: .env.example  README.md  docker-compose.yml
demos/postgresql-devicelogon/docker-entrypoint-initdb.d/: 01_init.sql  02_load_data.sql
demos/postgresql-devicelogon/jupyter/: Dockerfile  requirements.txt
demos/postgresql-devicelogon/scripts/: ingest.py
docs/: architecture.md  getting-started.md  index.md
docs/mcp-server/: architecture.md  configuration.md  tools.md
docs/toolkit/: api-reference.md  configuration.md  kernel-sessions.md  notebook-transports.md  utilities.md
skills/data-exploration-analysis/: SKILL.md
skills/data-exploration-analysis/references/: data-analysis-techniques.md  data-query-guide.md  data-visualization-guide.md
